<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".View.Fragment.MenuFragment">

                <TextView
                    android:id="@+id/textProducts_purchased"
                    android:layout_width="320dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="36dp"
                    android:drawableRight="@drawable/ic_right"
                    android:text="@string/products_purchased"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/phoneView"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewProfile" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/addressView"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <TextView
                    android:id="@+id/textphone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="145dp"
                    android:layout_marginEnd="44dp"
                    android:text="TextView"
                    android:textAlignment="viewStart"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <TextView
                    android:id="@+id/textUserName"
                    android:layout_width="65dp"
                    android:layout_height="39dp"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="36dp"
                    android:text="name"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/imageViewProfile"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Name_app"
                    android:textSize="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.55"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.017" />

                <TextView
                    android:id="@+id/texteditProfile"
                    android:layout_width="320dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="32dp"
                    android:drawableRight="@drawable/ic_right"
                    android:text="@string/EditProfile"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textProducts_purchased" />

                <ImageView
                    android:id="@+id/imageViewProfile"
                    android:layout_width="81dp"
                    android:layout_height="86dp"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="88dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <Button
                    android:id="@+id/btnLogOut"
                    android:layout_width="250dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/btnlogout"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/texteditLocation"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/textaddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="44dp"
                    android:text="TextView"
                    android:textAlignment="viewStart"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textphone" />

                <TextView
                    android:id="@+id/texteditPass"
                    android:layout_width="320dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="32dp"
                    android:drawableRight="@drawable/ic_right"
                    android:text="@string/editPass"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/texteditProfile" />

                <TextView
                    android:id="@+id/texteditLocation"
                    android:layout_width="320dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="32dp"
                    android:drawableRight="@drawable/ic_right"
                    android:text="@string/Location"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/texteditPass" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>